--- a/app/views/songs/_search_results.html.haml
+++ b/app/views/songs/_search_results.html.haml
@@ -5,6 +5,6 @@
     %th Play
   -@songs.each do |song|
     %tr
-      %td= song["artist"]
-      %td= song["name"]
-      %td{:id => song["song_id"]}= link_to "Play", {:action => :play, :id => song["song_id"]}, :remote => true
+      %td= song.artist
+      %td= song.name
+      %td{:id => song.id}= link_to "Play", {:action => :play, :id => song.id}, :remote => true
