--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,16 @@
 <head>
   <title>GroovesharkMobile</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= stylesheet_link_tag "http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" %>
+  <%= javascript_include_tag "http://code.jquery.com/jquery-1.5.min.js" %>
+  <%= javascript_include_tag "rails.js" %>
+  <%= javascript_include_tag "http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js" %>
   <%= csrf_meta_tag %>
 </head>
 <body>
 
+  <div data-role="page">
 <%= yield %>
-
+  </div>
 </body>
 </html>
